# AST-workers

./: .gitignore  README.md  README_zh.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: publish.yml
ast_mcp/: __init__.py  install_go.py  install_ts.py  server.py
core/go/: ast-go  go.mod  main.go
core/go/cmd/: delete_function.go  delete_struct.go  insert_function.go  insert_import.go  insert_struct.go  json.go  list_functions.go  list_imports.go  list_structs.go  loader.go  root.go  show.go  type_checker.go  update_function.go  update_struct_field.go  validate.go
core/nodejs-ts/: .npmignore  README.md  package-lock.json  package.json
core/nodejs-ts/src/: cli.ts  index.ts
core/nodejs-ts/src/operations/: batch.ts  delete.ts  insert.ts  query.ts  rename.ts  update.ts
core/nodejs-ts/src/utils/: format.ts  project.ts
core/nodejs-ts/test/: sample.ts
core/python/: README.md  README_zh.md  pyproject.toml
core/python/ast_py/: __init__.py  cli.py  operations.py
core/python/ast_py/generator/: __init__.py  function.py  imports.py  klass.py
core/python/ast_py/operations/: __init__.py  batch.py  delete.py  insert.py  query.py  rename.py  update.py
core/python/ast_py/parser/: __init__.py  params.py
core/python/ast_py/utils/: __init__.py  format.py  validation.py
docs/: JSON_SPEC.md
tests/: complex.py  final_test.py  ops.json  sample.py
