[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ast-workers-mcp"
version = "0.2.0"
description = "MCP Server for AST Workers - Language-aware code manipulation via CLI tools"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AST Workers"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.scripts]
ast-workers-mcp = "ast_mcp.server:main"

[project.entry-points."ast_workers_mcp"]
install-ts = "ast_mcp.install_ts:main"
install-go = "ast_mcp.install_go:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ast_mcp"]

[tool.setuptools.package-data]
ast_mcp = ["ast-ts-dist.tar.gz"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "W505"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 120